overhauls data-server client to support affectors in future

--- a/crates/data-server/Cargo.toml
+++ b/crates/data-server/Cargo.toml
@@ -20,6 +20,10 @@ protocol = { workspace = true, features = ["alloc", "thiserror"] }
 tokio = { workspace = true, features = ["rt", "macros", "net", "sync", "io-util"] }
 tokio-stream = { version = "0.1.15", features = ["net"] }
 thiserror = "1.0.61"
+futures = "0.3.30"
+tokio-serde = { version = "0.9.0", features = ["bincode"] }
+tokio-util = { version = "0.7.11", features = ["codec"] }
+serde = { version = "1.0.208", features = ["derive"] }
 
 [dev-dependencies]
 reserve-port = "2"
