--- a/crates/sensor-tui/Cargo.toml
+++ b/crates/sensor-tui/Cargo.toml
@@ -14,7 +14,7 @@ ratatui = "0.28"
 tui-tree-widget = { version = "0.22.0", git = "https://github.com/dvdsk/tui-rs-tree-widget" }
 clap = { workspace = true }
 
-tokio =  { workspace = true}
+tokio =  { workspace = true, features = ["macros"] }
 tracing.workspace = true
 tracing-error = { workspace = true }
 tracing-subscriber.workspace = true 
