--- a/crates/data-server/Cargo.toml
+++ b/crates/data-server/Cargo.toml
@@ -24,6 +24,8 @@ futures = "0.3.30"
 tokio-serde = { version = "0.9.0", features = ["bincode"] }
 tokio-util = { version = "0.7.11", features = ["codec"] }
 serde = { version = "1.0.208", features = ["derive"] }
+futures-concurrency = "7.6.1"
+slotmap = "1.0.7"
 
 [dev-dependencies]
 reserve-port = "2"
