--- a/crates/log-store/Cargo.toml
+++ b/crates/log-store/Cargo.toml
@@ -22,6 +22,7 @@ jiff = { workspace =true, features = ["serde"] }
 protocol = { workspace = true, features = ["alloc", "thiserror"] }
 data-server = { workspace = true }
 byteseries = { workspace = true }
+ratelimited-logger = { workspace = true }
 
 tokio = { workspace = true, features = ["fs", "net", "rt-multi-thread", "sync"] }
 futures-concurrency = "7.6.1"
