--- a/crates/log-store/Cargo.toml
+++ b/crates/log-store/Cargo.toml
@@ -22,12 +22,10 @@ jiff = { workspace =true, features = ["serde"] }
 protocol = { workspace = true, features = ["alloc", "thiserror"] }
 data-server = { workspace = true }
 byteseries = { workspace = true }
-ratelimited-logger = { workspace = true }
+rpc = { workspace = true }
 
 tokio = { workspace = true, features = ["fs", "net", "rt-multi-thread", "sync"] }
 futures-concurrency = "7.6.1"
-tokio-serde = { version = "0.9.0", features = ["bincode"] }
-tokio-util = { version = "0.7.11", features = ["codec"] }
 serde = { version = "1.0.203", features = ["derive"] }
 bincode = "1.3.3"
 thiserror = { workspace = true }
@@ -35,7 +33,6 @@ futures = "0.3.30"
 smallvec = "2.0.0-alpha.6"
 num = "0.4.3"
 hdrhistogram = "7.5.4"
-governor = "0.6.3"
 
 [dev-dependencies]
 futures-concurrency = "7.6.1"
