--- a/crates/data-store/Cargo.toml
+++ b/crates/data-store/Cargo.toml
@@ -18,6 +18,7 @@ tracing = { workspace = true }
 tracing-error = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 jiff = { workspace =true, features = ["serde"] }
+rpc = { workspace = true }
 
 protocol = { workspace = true, features = ["alloc", "thiserror"] }
 data-server = { workspace = true }
@@ -25,15 +26,12 @@ data-server = { workspace = true }
 byteseries = { workspace = true }
 tokio = { workspace = true, features = ["fs", "net", "rt-multi-thread", "sync"] }
 futures-concurrency = "7.6.1"
-tokio-serde = { version = "0.9.0", features = ["bincode"] }
-tokio-util = { version = "0.7.11", features = ["codec"] }
 serde = { version = "1.0.203", features = ["derive"] }
 thiserror = { workspace = true }
 futures = "0.3.30"
 smallvec = "2.0.0-alpha.6"
 num = "0.4.3"
 hdrhistogram = "7.5.4"
-governor = "0.6.3"
 
 [dev-dependencies]
 futures-concurrency = "7.6.1"
