--- a/crates/data-server/Cargo.toml
+++ b/crates/data-server/Cargo.toml
@@ -28,6 +28,7 @@ serde = { version = "1.0.208", features = ["derive"] }
 futures-concurrency = "7.6.1"
 slotmap = "1.0.7"
 tracing-futures = "0.2.5"
+socket2 = "0.5.7"
 
 [dev-dependencies]
 reserve-port = "2"
