--- a/crates/desk-sensors/.cargo/config.toml
+++ b/crates/desk-sensors/.cargo/config.toml
@@ -1,2 +1,5 @@
 [target.aarch64-unknown-linux-musl]
 rustflags = ["-Clinker=rust-lld"]
+
+[target.armv7-unknown-linux-musleabihf]
+rustflags = ["-Clinker=rust-lld"]
