--- a/crates/data-server/Cargo.toml
+++ b/crates/data-server/Cargo.toml
@@ -29,6 +29,7 @@ futures-concurrency = "7.6.1"
 slotmap = "1.0.7"
 tracing-futures = "0.2.5"
 socket2 = "0.5.7"
+governor = "0.6.3"
 
 [dev-dependencies]
 reserve-port = "2"
