--- a/sensor-nodes/bed-sensors/Cargo.toml
+++ b/sensor-nodes/bed-sensors/Cargo.toml
@@ -52,30 +52,30 @@ stm32f4 = { version = "0.15.1", default-features = false, features = ["stm32f401
 rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
 # fasthash = { version = "0.4.0", default-features = false }
 
-# [patch.crates-io]
-# embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "7a26e11" }
-# embassy-net = {git = "https://github.com/embassy-rs/embassy", rev = "7a26e11" }
-# embassy-net-wiznet = {git = "https://github.com/embassy-rs/embassy", rev = "7a26e11" }
-# embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "7a26e11" }
-# embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "7a26e11" }
-# embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "7a26e11" }
-# embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "7a26e11" }
-# embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "7a26e11" }
-# embassy-time-driver = {git = "https://github.com/embassy-rs/embassy", rev = "7a26e11" }
-# embassy-time-queue-driver = {git = "https://github.com/embassy-rs/embassy", rev = "7a26e11" }
+[patch.crates-io]
+embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "0ef06cc" }
+embassy-net = {git = "https://github.com/embassy-rs/embassy", rev = "0ef06cc" }
+embassy-net-wiznet = {git = "https://github.com/embassy-rs/embassy", rev = "0ef06cc" }
+embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "0ef06cc" }
+embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "0ef06cc" }
+embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "0ef06cc" }
+embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "0ef06cc" }
+embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "0ef06cc" }
+embassy-time-driver = {git = "https://github.com/embassy-rs/embassy", rev = "0ef06cc" }
+embassy-time-queue-driver = {git = "https://github.com/embassy-rs/embassy", rev = "0ef06cc" }
 
 # [patch.'https://github.com/embassy-rs/embassy.git']
-[patch.crates-io]
-embassy-stm32 = {path = "../../../embassy/embassy-stm32" }
-embassy-net = {path = "../../../embassy/embassy-net" }
-embassy-net-wiznet = {path = "../../../embassy/embassy-net-wiznet" }
-embassy-sync = {path = "../../../embassy/embassy-sync" }
-embassy-executor = {path = "../../../embassy/embassy-executor" }
-embassy-embedded-hal = {path = "../../../embassy/embassy-embedded-hal" }
-embassy-time = {path = "../../../embassy/embassy-time" }
-embassy-futures = {path = "../../../embassy/embassy-futures" }
-embassy-time-driver = {path = "../../../embassy/embassy-time-driver"}
-embassy-time-queue-driver = {path = "../../../embassy/embassy-time-queue-driver"}
+# [patch.crates-io]
+# embassy-stm32 = {path = "../../../embassy/embassy-stm32" }
+# embassy-net = {path = "../../../embassy/embassy-net" }
+# embassy-net-wiznet = {path = "../../../embassy/embassy-net-wiznet" }
+# embassy-sync = {path = "../../../embassy/embassy-sync" }
+# embassy-executor = {path = "../../../embassy/embassy-executor" }
+# embassy-embedded-hal = {path = "../../../embassy/embassy-embedded-hal" }
+# embassy-time = {path = "../../../embassy/embassy-time" }
+# embassy-futures = {path = "../../../embassy/embassy-futures" }
+# embassy-time-driver = {path = "../../../embassy/embassy-time-driver"}
+# embassy-time-queue-driver = {path = "../../../embassy/embassy-time-queue-driver"}
 
 [profile.dev]
 opt-level = "s"
