--- a/sensor-nodes/bed-sensors/.cargo/config.toml
+++ b/sensor-nodes/bed-sensors/.cargo/config.toml
@@ -9,7 +9,7 @@ linker = "flip-link"
 target = "thumbv7em-none-eabihf"
 
 [env]
-DEFMT_LOG = "debug,sps30_async=info,bosch_bme680=info"
+DEFMT_LOG = "debug,sps30_async=warn,bosch_bme680=info"
 EMBASSY_EXECUTOR_TASK_ARENA_SIZE="10900"
 
 # [unstable]
