--- a/crates/usb_bridge/rust-toolchain.toml
+++ b/crates/usb_bridge/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
-channel = "stable"
+channel = "nightly"
 components = [ "rust-src", "rustfmt", "llvm-tools" ]
 targets = [
     "x86_64-unknown-linux-gnu",
