refactor size of protocol::Msg to protocol::Msg::max_size

--- a/sensor-nodes/bed-sb/Cargo.toml
+++ b/sensor-nodes/bed-sb/Cargo.toml
@@ -43,7 +43,7 @@ sps30-async = { version = "0.3.0", path = "/home/david/tmp/sps30", features = ["
 nau7802-async = { path = "/home/david/tmp/nau7802-rs", features = ["serde", "postcard", "defmt"] }
 
 # encoding
-protocol = { path = "../../../crates/protocol" }
+protocol = { path = "../../crates/protocol" }
 
 [patch.crates-io]
 embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
