add sensor-nodes workspace, use workspace to centralize patching of embassy deps

--- a/sensor-nodes/bed-sb/Cargo.toml
+++ b/sensor-nodes/bed-sb/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bed-sensors"
+name = "small-bedroom-sensor-node"
 version = "0.2.0"
 rust-version = "1.78"
 edition = "2021"
@@ -43,26 +43,4 @@ sps30-async = { version = "0.3.0", path = "/home/david/tmp/sps30", features = ["
 nau7802-async = { path = "/home/david/tmp/nau7802-rs", features = ["serde", "postcard", "defmt"] }
 
 # encoding
-protocol = { path = "../../crates/protocol" }
-
-[patch.crates-io]
-embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-time-driver = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-time-queue-driver = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-usb = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-
-[profile.dev]
-opt-level = "s"
-
-[profile.release]
-lto = "fat"
-opt-level = "s"
-incremental = false
-codegen-units = 1
-# note: debug = true is okay - debuginfo isn't flashed to the device!
-debug = true
+protocol = { workspace = true }
