--- a/sensor-nodes/bed-lb/Cargo.toml
+++ b/sensor-nodes/bed-lb/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bed-sensors"
+name = "large-bedroom-bed-node"
 version = "0.2.0"
 rust-version = "1.78"
 edition = "2021"
@@ -44,40 +44,4 @@ sps30-async = { version = "0.3.0", path = "/home/david/tmp/sps30", features = ["
 nau7802-async = { path = "/home/david/tmp/nau7802-rs", features = ["serde", "postcard", "defmt"] }
 
 # encoding
-protocol = { path = "../../crates/protocol" }
-
-[patch.crates-io]
-embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-net = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-net-wiznet = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-time-driver = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-embassy-time-queue-driver = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
-
-# [patch.'https://github.com/embassy-rs/embassy.git']
-# [patch.crates-io]
-# embassy-stm32 = {path = "../../../embassy/embassy-stm32" }
-# embassy-net = {path = "../../../embassy/embassy-net" }
-# embassy-net-wiznet = {path = "../../../embassy/embassy-net-wiznet" }
-# embassy-sync = {path = "../../../embassy/embassy-sync" }
-# embassy-executor = {path = "../../../embassy/embassy-executor" }
-# embassy-embedded-hal = {path = "../../../embassy/embassy-embedded-hal" }
-# embassy-time = {path = "../../../embassy/embassy-time" }
-# embassy-futures = {path = "../../../embassy/embassy-futures" }
-# embassy-time-driver = {path = "../../../embassy/embassy-time-driver"}
-# embassy-time-queue-driver = {path = "../../../embassy/embassy-time-queue-driver"}
-
-[profile.dev]
-opt-level = "s"
-
-[profile.release]
-lto = "fat"
-opt-level = "s"
-incremental = false
-codegen-units = 1
-# note: debug = true is okay - debuginfo isn't flashed to the device!
-debug = true
+protocol = { workspace = true }
