--- a/crates/usb-bridge/Cargo.toml
+++ b/crates/usb-bridge/Cargo.toml
@@ -20,4 +20,5 @@ tracing-error = { workspace = true }
 tracing = { workspace = true }
 nusb = "0.1.10"
 color-eyre.workspace = true
+users = "0.11.0"
 
