--- a/crates/zigbee-bridge/Cargo.toml
+++ b/crates/zigbee-bridge/Cargo.toml
@@ -14,3 +14,4 @@ rumqttc = { version = "0.24.0", default-features = false }
 serde_json = "1.0.132"
 thiserror.workspace = true
 tokio = { workspace = true, features = ["sync"] }
+tracing = { workspace = true }
