--- a/crates/data-server/Cargo.toml
+++ b/crates/data-server/Cargo.toml
@@ -25,7 +25,7 @@ futures = "0.3.30"
 tokio-serde = { version = "0.9.0", features = ["bincode"] }
 tokio-util = { version = "0.7.11", features = ["codec"] }
 serde = { version = "1.0.208", features = ["derive"] }
-futures-concurrency = "7.6.1"
+futures-concurrency = { workspace = true }
 slotmap = "1.0.7"
 tracing-futures = "0.2.5"
 socket2 = "0.5.7"
