--- a/crates/log-store/Cargo.toml
+++ b/crates/log-store/Cargo.toml
@@ -25,7 +25,7 @@ byteseries = { workspace = true }
 rpc = { workspace = true }
 
 tokio = { workspace = true, features = ["fs", "net", "rt-multi-thread", "sync"] }
-futures-concurrency = "7.6.1"
+futures-concurrency = { workspace = true }
 serde = { version = "1.0.203", features = ["derive"] }
 bincode = "1.3.3"
 thiserror = { workspace = true }
@@ -36,7 +36,7 @@ hdrhistogram = "7.5.4"
 derivative = "2.2.0"
 
 [dev-dependencies]
-futures-concurrency = "7.6.1"
+futures-concurrency = { workspace = true }
 heapless = "0.8.0"
 nucleo-matcher = "0.3.1"
 reserve-port = "2.0.1"
