--- a/crates/desk-sensors/Cargo.toml
+++ b/crates/desk-sensors/Cargo.toml
@@ -18,6 +18,7 @@ color-eyre = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace =true, features = ["env-filter"] }
 tracing-error = { workspace = true }
+ratelimited-logger = { workspace = true }
 
 tokio = { workspace = true, features = ["rt", "time", "macros"] }
 embedded-hal-async = "1.0.0"
