--- a/crates/zigbee-bridge/Cargo.toml
+++ b/crates/zigbee-bridge/Cargo.toml
@@ -21,3 +21,4 @@ strum = { version = "0.26.3", features = ["derive"] }
 ratelimited-logger = { workspace = true }
 color-eyre.workspace = true
 itertools = "0.13.0"
+regex = "1.11.1"
