removing ratelimited_logger object

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ log-store = { path = "crates/log-store" }
 protocol = { path = "crates/protocol" }
 zigbee-bridge = { path = "crates/zigbee-bridge" }
 rpc = { path = "crates/rpc" }
-ratelimited-logger = { path = "crates/ratelimited-logger" }
+logger = { path = "crates/logger" }
 
 byteseries = { git = "https://github.com/dvdsk/byteseries" }
 
