--- a/crates/rpc/Cargo.toml
+++ b/crates/rpc/Cargo.toml
@@ -14,7 +14,7 @@ tokio = { workspace = true, features = ["net", "rt", "sync", "time"] }
 tokio-util = { version = "0.7.11", features = ["codec"] }
 tracing.workspace = true
 
-ratelimited-logger = { workspace = true }
+logger = { workspace = true }
 serde = { version = "1.0.209", features = ["derive"] }
 tokio-serde = { version = "0.9.0", features = ["bincode"] }
 thiserror.workspace = true
