--- a/crates/zigbee-bridge/Cargo.toml
+++ b/crates/zigbee-bridge/Cargo.toml
@@ -18,7 +18,7 @@ tokio = { workspace = true, features = ["sync"] }
 tracing = { workspace = true }
 futures = "0.3.31"
 strum = { version = "0.26.3", features = ["derive"] }
-ratelimited-logger = { workspace = true }
+logger = { workspace = true }
 color-eyre.workspace = true
 itertools = "0.13.0"
 regex = "1.11.1"
