--- a/crates/data-server/Cargo.toml
+++ b/crates/data-server/Cargo.toml
@@ -15,6 +15,7 @@ color-eyre = { workspace = true }
 tracing = { workspace = true }
 tracing-error = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
+logger = { workspace = true }
 rpc = { workspace = true }
 
 protocol = { workspace = true, features = ["alloc", "thiserror"] }
