--- a/crates/log-store/Cargo.toml
+++ b/crates/log-store/Cargo.toml
@@ -14,6 +14,7 @@ default = ["api", "server"]
 [dependencies]
 clap = { workspace = true }
 color-eyre = { workspace = true }
+logger = { workspace = true }
 tracing = { workspace = true }
 tracing-error = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
