--- a/crates/sensor-tui/Cargo.toml
+++ b/crates/sensor-tui/Cargo.toml
@@ -15,6 +15,7 @@ tui-tree-widget = { version = "0.22.0", git = "https://github.com/dvdsk/tui-rs-t
 clap = { workspace = true }
 
 tokio =  { workspace = true, features = ["macros"] }
+logger = { workspace = true }
 tracing.workspace = true
 tracing-error = { workspace = true }
 tracing-subscriber.workspace = true 
