--- a/crates/text-widget/Cargo.toml
+++ b/crates/text-widget/Cargo.toml
@@ -16,6 +16,7 @@ nucleo-matcher = "0.3.1"
 tokio = { workspace = true}
 gethostname = "0.5.0"
 
+logger.workspace = true
 tracing.workspace = true
 tracing-error.workspace = true
 tracing-subscriber.workspace = true
