--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -24,7 +24,7 @@ bincode = "1.3"
 
 thiserror = "1.0"
 
-chrono = { version = "0.4", features = ["serde"] }
+jiff = { workspace = true, features = ["serde"] }
 time = { workspace = true, features = ["macros"] }
 tz-rs = "0.6.14"
 
