--- a/sensor-nodes/bed-sb/Cargo.toml
+++ b/sensor-nodes/bed-sb/Cargo.toml
@@ -7,18 +7,15 @@ license = "GPLv3"
 authors = ["David Kleingeld & Eva van Houten"]
 
 [dependencies]
-embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f401cc",
-"unstable-pac", "memory-x", "time-driver-tim9", "time", "exti" ]  }
-embassy-sync = { version = "0.6.0", features = ["defmt"] }
-embassy-executor = { version = "0.6.0", features = ["arch-cortex-m",
-"executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
-embassy-embedded-hal = { version = "0.2.0" }
-embassy-time = { version = "0.3.2", features = ["defmt",
-"defmt-timestamp-uptime-ms", "tick-hz-32_768"] }
-embassy-futures = { version = "0.1.0"}
+embassy-stm32.workspace = true
+embassy-sync.workspace = true
+embassy-executor.workspace = true
+embassy-embedded-hal.workspace = true
+embassy-time.workspace = true
+embassy-futures.workspace = true
 embassy-usb = { version = "0.3.0", features = ["defmt"] }
 
-defmt = "0.3"
+defmt.workspace = true
 defmt-rtt = "0.4"
 
 cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
@@ -35,6 +32,7 @@ rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
 static_cell = "2.0.0"
 
 # sensors
+sensors = { path = "../sensors" }
 bosch-bme680 = { version = "1.0.2", path = "/home/david/Documents/async-bosch-bme680" }
 max44009 = { version = "0.2", git = "https://github.com/dvdsk/max44009-rs" }
 sht31 = { version = "0.3.0", git = "https://github.com/dvdsk/SHT31-rs", features = ["postcard"] }
