--- a/sensor-nodes/Cargo.toml
+++ b/sensor-nodes/Cargo.toml
@@ -5,6 +5,9 @@ members = ["bed-sb", "bed-lb", "sensors"]
 [workspace.dependencies]
 protocol = { path = "../crates/protocol" }
 
+cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
+cortex-m-rt = "0.7.0"
+
 embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f401cc",
 "unstable-pac", "memory-x", "time-driver-tim9", "time", "exti" ]  }
 embassy-net = { version = "0.4.0", features = ["defmt", "proto-ipv4", "tcp", "dhcpv4","medium-ethernet"] }
@@ -17,7 +20,15 @@ embassy-time = { version = "0.3.2", features = ["defmt",
 "defmt-timestamp-uptime-ms", "tick-hz-32_768"] }
 embassy-futures = { version = "0.1.0"}
 
+embedded-hal = "1.0.0"
+embedded-hal-async = "1.0"
+embedded-hal-bus = { version = "0.2", features = ["async", "defmt-03"] }
+embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
+futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
+
 defmt = "0.3"
+defmt-rtt = "0.4"
+panic-probe = { version = "0.3", features = ["print-defmt"] }
 
 [patch.crates-io]
 embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "0349a8d" }
