refactor&fix zigbee-bridge + adds radiator bridge
refactor
 - moves tests to examples since they have no asserts and rely purly on
   user inspection of the system.
 - removes if (condition) print debugging. Instead store function information
   in spans to allow runtime filtering through tracing
fix
 - mqtt client name is random on startup (fixes retained radiator
   messages not deliverd after startup)

rather big sorry

--- a/crates/zigbee-bridge/Cargo.toml
+++ b/crates/zigbee-bridge/Cargo.toml
@@ -22,3 +22,7 @@ logger = { workspace = true }
 color-eyre.workspace = true
 itertools = "0.13.0"
 regex = "1.11.1"
+rand = "0.8.5"
+
+[dev-dependencies]
+logger.workspace = true
