--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ logger = { path = "crates/logger" }
 
 byteseries = { git = "https://github.com/dvdsk/byteseries" }
 
-tokio = "1.38"
+tokio = { version = "1.38", features = ["rt-multi-thread"] }
 color-eyre = "0.6.3"
 tracing = "0.1.40"
 tracing-error = "0.2.0"
