--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -42,3 +42,4 @@ clap = { workspace = true }
 futures-concurrency = { workspace = true }
 strum = { version = "0.26.2", default-features = false, features = ["derive"] }
 dbstruct = { git = "https://github.com/dvdsk/dbstruct" }
+color-eyre.workspace = true
