--- a/crates/zigbee-bridge/Cargo.toml
+++ b/crates/zigbee-bridge/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 authors.workspace = true
 
 [dependencies]
+protocol.workspace = true
 colorimetry = { git = "https://github.com/harbik/colorimetry", features = ["cct"] }
 # default-features enable rustls which we do not need and drags in 
 # C dependencies making deployment a chore
