--- a/crates/desk-sensors/Cargo.toml
+++ b/crates/desk-sensors/Cargo.toml
@@ -7,7 +7,6 @@ authors.workspace = true
 
 [dependencies]
 linux-embedded-hal = "0.4"
-gpiocdev-embedded-hal = { version = "0.1.1", features = ["async_tokio"] }
 bme280 = { version = "0.5", git = "https://github.com/dvdsk/bme280-rs", features = ["postcard", "serde", "with_std"] }
 
 data-server = { workspace = true }
@@ -21,6 +20,5 @@ tracing-error = { workspace = true }
 logger = { workspace = true }
 
 tokio = { workspace = true, features = ["rt", "time", "macros"] }
-embedded-hal-async = "1.0.0"
 heapless = "0.8.0"
-governor = "0.6.3"
+governor.workspace = true
