--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -13,19 +13,14 @@ zigbee-bridge = { workspace = true }
 
 futures = "0.3"
 tokio = { workspace = true, features = ["full"] }
-axum = { version = "0.7.4", default-features = false, features = ["tokio", "http1"] }
-axum-macros = "0.4.1"
 
-hueclient = { git = "https://github.com/dvdsk/hue.rs"}
-
-serde = { version = "1.0", features = ["derive"] }
+serde.workspace = true
 serde_yaml = "0.9"
 bincode = "1.3"
 
-thiserror = "1.0"
+thiserror.workspace = true
 
 jiff = { workspace = true, features = ["serde"] }
-tz-rs = "0.6.14"
 
 bytes = "1.5"
 byteorder = "1.4"
