--- a/crates/log-store/Cargo.toml
+++ b/crates/log-store/Cargo.toml
@@ -27,12 +27,11 @@ rpc = { workspace = true }
 
 tokio = { workspace = true, features = ["fs", "net", "rt-multi-thread", "sync"] }
 futures-concurrency = { workspace = true }
-serde = { version = "1.0.203", features = ["derive"] }
+serde.workspace = true
 bincode = "1.3.3"
 thiserror = { workspace = true }
 futures = "0.3.30"
 smallvec = "2.0.0-alpha.6"
-num = "0.4.3"
 hdrhistogram = "7.5.4"
 derivative = "2.2.0"
 
