--- a/crates/logger/Cargo.toml
+++ b/crates/logger/Cargo.toml
@@ -12,6 +12,6 @@ tracing-error = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 tracing-journald = "0.3"
 libsystemd = "0.7"
-governor = "0.6.3"
+governor.workspace = true
 tracing-core = "0.1.32"
 color-eyre.workspace = true
