--- a/crates/rpc/Cargo.toml
+++ b/crates/rpc/Cargo.toml
@@ -9,12 +9,11 @@ authors.workspace = true
 [dependencies]
 color-eyre = "0.6.3"
 futures = "0.3.30"
-governor = "0.6.3"
+governor.workspace = true
 tokio = { workspace = true, features = ["net", "rt", "sync", "time"] }
 tokio-util = { version = "0.7.11", features = ["codec"] }
 tracing.workspace = true
 
-logger = { workspace = true }
-serde = { version = "1.0.209", features = ["derive"] }
+serde.workspace = true
 tokio-serde = { version = "0.9.0", features = ["bincode"] }
 thiserror.workspace = true
