--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ color-eyre = "0.6.3"
 tracing = "0.1.40"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+futures = "0.3.31"
 futures-concurrency = "7.6.2"
 jiff = "0.1"
 clap = { version = "4", features = ["derive"]} 
