--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -11,7 +11,7 @@ protocol = { workspace = true, features = ["alloc"] }
 data-server = { workspace = true }
 zigbee-bridge = { workspace = true }
 
-futures = "0.3"
+futures.workspace = true
 tokio = { workspace = true, features = ["full"] }
 
 serde.workspace = true
