--- a/crates/log-store/Cargo.toml
+++ b/crates/log-store/Cargo.toml
@@ -30,7 +30,7 @@ futures-concurrency = { workspace = true }
 serde.workspace = true
 bincode = "1.3.3"
 thiserror = { workspace = true }
-futures = "0.3.30"
+futures.workspace = true
 smallvec = "2.0.0-alpha.6"
 hdrhistogram = "7.5.4"
 derivative = "2.2.0"
