--- a/crates/radiator-bridge/Cargo.toml
+++ b/crates/radiator-bridge/Cargo.toml
@@ -15,5 +15,6 @@ tokio = { workspace = true }
 clap = { workspace = true }
 logger = { workspace = true }
 tracing = { workspace = true }
+color-eyre.workspace = true
 futures-concurrency.workspace = true
 futures = "0.3.31"
