--- a/crates/rpc/Cargo.toml
+++ b/crates/rpc/Cargo.toml
@@ -7,8 +7,8 @@ license.workspace = true
 authors.workspace = true
 
 [dependencies]
-color-eyre = "0.6.3"
-futures = "0.3.30"
+color-eyre.workspace = true
+futures.workspace = true
 governor.workspace = true
 tokio = { workspace = true, features = ["net", "rt", "sync", "time"] }
 tokio-util = { version = "0.7.11", features = ["codec"] }
