--- a/crates/text-widget/Cargo.toml
+++ b/crates/text-widget/Cargo.toml
@@ -14,8 +14,9 @@ data-server = { workspace = true }
 data-store = { workspace = true }
 nucleo-matcher = "0.3.1"
 tokio = { workspace = true}
-gethostname = "0.5.0"
+gethostname.workspace = true
 
+itertools.workspace = true
 logger.workspace = true
 tracing.workspace = true
 tracing-error.workspace = true
