--- a/crates/data-store/Cargo.toml
+++ b/crates/data-store/Cargo.toml
@@ -25,7 +25,8 @@ rpc = { workspace = true }
 protocol = { workspace = true, features = ["alloc", "thiserror"] }
 data-server = { workspace = true }
 
-byteseries = { workspace = true }
+# byteseries = { workspace = true }
+byteseries = { path = "/home/david/Documents/byteseries" }
 tokio = { workspace = true, features = ["fs", "net", "rt-multi-thread", "sync"] }
 futures-concurrency = { workspace = true }
 serde.workspace = true
@@ -36,6 +37,7 @@ num = "0.4.3"
 ron = "0.8.1"
 indicatif = "0.17.9"
 itertools.workspace = true
+rstest = "0.24.0"
 
 [dev-dependencies]
 futures-concurrency = { workspace = true }
