--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 resolver = "2"
 members = ["crates/*"]
-exclude = ["sensor-nodes/bed-lb", "sensor-nodes/bed-sb"]
+exclude = ["nodes/embassy/bed-lb", "nodes/embassy/bed-sb",
+"nodes/esp32/airbox"]
 
 [workspace.dependencies]
 data-server = { path = "crates/data-server" }
