--- a/nodes/embassy/Cargo.toml
+++ b/nodes/embassy/Cargo.toml
@@ -3,19 +3,19 @@ resolver = "2"
 members = ["bed-sb", "bed-lb", "sensors"]
 
 [workspace.dependencies]
-protocol = { path = "../crates/protocol" }
+protocol = { path = "../../crates/protocol" }
 
 cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
 cortex-m-rt = "0.7.0"
 
-embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f401cc",
+embassy-stm32 = { version = "0.2.0", features = [ "defmt", "stm32f401cc",
 "unstable-pac", "memory-x", "time-driver-tim9", "time", "exti" ]  }
-embassy-net = { version = "0.5.0", features = ["defmt", "proto-ipv4", "tcp", "dhcpv4","medium-ethernet"] }
-embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
-embassy-sync = { version = "0.6.1", features = ["defmt"] }
+embassy-net = { version = "0.7.0", features = ["defmt", "proto-ipv4", "tcp", "dhcpv4","medium-ethernet"] }
+embassy-net-wiznet = { version = "0.2.0", features = ["defmt"] }
+embassy-sync = { version = "0.6.2", features = ["defmt"] }
 embassy-executor = { version = "0.7", features = ["arch-cortex-m",
 "executor-thread", "defmt", "executor-interrupt"] }
-embassy-embedded-hal = { version = "0.2.0" }
+embassy-embedded-hal = { version = "0.3.0" }
 embassy-time = { version = "0.4", features = ["defmt",
 "defmt-timestamp-uptime-ms", "tick-hz-32_768"] }
 embassy-futures = { version = "0.1.1"}
@@ -31,16 +31,16 @@ defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 
 [patch.crates-io]
-embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
-embassy-net = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
-embassy-net-wiznet = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
-embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
-embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
-embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
-embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
-embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
-embassy-time-driver = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
-embassy-usb = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
+embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+embassy-net = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+embassy-net-wiznet = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+embassy-time-driver = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+embassy-usb = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
 
 [workspace.package]
 rust-version = "1.78"
